<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_girl"
    tools:context=".LognActivity">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="179dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/input_design"
        android:text="@string/logout" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_marginTop="230dp"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/phone_number"
        android:textStyle="bold"
        android:inputType="number"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_design"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="17sp"
        />

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/password"
        android:layout_marginTop="5dp"
        >
        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Material.Drawable.CheckBox"
            android:text="@string/remember_me"
            android:gravity="clip_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="17dp"
            />



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:layout_below="@+id/linear_layout1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/an_admin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/an_admin"
        android:layout_below="@+id/login_btn"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/not_an_admin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/not_an_admin"
        android:layout_below="@+id/login_btn"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"/>




</RelativeLayout>